# chiron-server

./: .env  .gitignore  alembic.ini  pyproject.toml
alembic/versions/: dcac393e8921_create_meta_table.py  fed617684e34_create_demographics_table.py
chiron_server/: __init__.py  config.py  dependencies.py  main.py
chiron_server/modules/: __init__.py  demographics.py
chiron_server/modules/demographics/: routes.py  schemas.py  types.py
