[tool.poetry]
name = "chiron-server"
version = "0.1.0"
description = ""
authors = ["Jath Palasubramaniam <jathpala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.13.0"
fastapi = "^0.111.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
